src/test/ui/impl-trait/negative-reasoning.stderr
error[E0119]: conflicting implementations of trait `AnotherTrait` for type `D<OpaqueType>`
  --> $DIR/negative-reasoning.rs:19:1
   |
LL | impl<T: std::fmt::Debug> AnotherTrait for T {}
   | ------------------------------------------- first implementation here
...
LL | impl AnotherTrait for D<OpaqueType> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `D<OpaqueType>`
   |
   = note: downstream crates may implement trait `std::fmt::Debug` for type `OpaqueType`

error: cannot implement trait on type alias impl trait
  --> $DIR/negative-reasoning.rs:19:25
   |
LL | impl AnotherTrait for D<OpaqueType> {
   |                         ^^^^^^^^^^
   |
note: type alias impl trait defined here
  --> $DIR/negative-reasoning.rs:7:19
   |
LL | type OpaqueType = impl OpaqueTrait;
   |                   ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0119`.
